# DocuMind

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
apps/api/: Dockerfile  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py
apps/api/src/app/: config.py  dependencies.py  main.py
apps/api/src/app/api/: config_routes.py  conversations.py  documents.py  router.py  websocket.py
apps/api/src/app/db/: session.py  vector_store.py
apps/api/src/app/models/: __init__.py  chunk.py  conversation.py  document.py  message.py
apps/api/src/app/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
apps/api/src/app/rag/: __init__.py  chunker.py  embedder.py  generator.py  pipeline.py  prompts.py  retriever.py
apps/api/src/app/rag/extractors/: __init__.py  base.py  docx.py  markdown.py  pdf.py  text.py
apps/api/src/app/schemas/: __init__.py  config.py  conversation.py  document.py
apps/api/src/app/services/: __init__.py  conversation_service.py  document_service.py  stats_service.py
apps/api/src/app/workers/: __init__.py  ingestion.py
apps/api/tests/: conftest.py
apps/api/tests/test_api/: test_conversations.py  test_documents.py
apps/api/tests/test_rag/: test_chunker.py  test_extractors.py
apps/api/tests/test_services/: test_document_service.py
docs/: api-reference.md  architecture.md  configuration.md  deployment.md
(+35 files in other folders)
